fixed buttons and alignment and layout |120|

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,7 +6,7 @@ body
 }
 img
 {
-	height: 75px;
+	height: 65px;
 }
 .content
 {
